--- a/package.json
+++ b/package.json
@@ -8,6 +8,6 @@
 		"less-middleware":		"1.0.x",
 		"socket.io":			"0.9.x",
 		"underscore":			"1.6.x",
-		"watch":			"0.10.x"
+		"watchr":			"2.4.x"
 	}
 }
